--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-streamlit==1.31.0
-pandas==2.2.0
-numpy==1.24.0
-plotly==5.18.0
-scikit-learn==1.4.0
-sqlalchemy==2.0.25
-bcrypt==4.0.1
-python-dotenv==1.0.0
-openpyxl==3.1.2
-reportlab==4.0.9
-schedule==1.2.0
-pytz==2023.3
-pysqlite3-binary
+streamlit
+pandas
+numpy
+plotly
+scikit-learn
+sqlalchemy
